test/src/e2e_vm_tests/test_programs/should_pass/language/generic_with_other_generic/src/main.sw
script;

struct Generic1<T> {
    a: T,
}

struct Generic2<T> {
    b: Generic1<T>,
}

enum Generic3<T> {
  A: T,
  B: T
}

enum Generic4<T> {
  C: Generic3<T>,
  D: Generic3<T>
}

fn main() -> u64 {
  1
}