test/src/e2e_vm_tests/test_programs/should_fail/mismatch_closing_delimiters/src/main.sw
script;

struct Struct{x:u}
impl Struct{
    fn w()->f{{(()}}
    trait Supertrait{}
    impl Supertrait for Struct{)
}

fn s<A>(b:B) where A:t{}fn n(){}

fn main() -> u64 {
    0
}
